--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -93,16 +93,6 @@
 					  
 					  <div class="row">
 						  <div class="col-lg-6">
-							<!-- <div class="form-group">
-								<label class="control-label">วันนัดชำระ</label>
-				                <div class="input-group">
-									<input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
-										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
-										   ng-change="askModalObj.appointDateClick()">
-				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-				                </div>
-							</div> -->
-							
 							<div class="form-group">
 								<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
 								<div class="input-group">
@@ -113,17 +103,13 @@
 								  <input type="text" class="form-control" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
 								</div>
 							</div>
-							
-							
-							
 						  </div>
 						  <div class="col-lg-6">					  
 							<div class="form-group" ng-class="{'has-error':saveAskModalForm.nextTimeDate.$invalid}">
 								<label class="control-label">วันนัด Call</label>
 								<div class="input-group">
 									<input type="text" name="nextTimeDate" class="form-control datepickerNextTimeDate" style="padding-left: 12px;" 
-										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate"
-										   ng-disabled="askModalObj.trace.appointDate">
+										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate">
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 							    </div>
 							</div>
@@ -131,7 +117,7 @@
 						  <div class="col-lg-12">
 						  	<div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
 								<label class="control-label">Action Code</label>
-								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.actionCodes" required>
+								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.actionCodes">
 									<option value="">--เลือก Action Code--</option>
 						  		</select>
 							</div>
@@ -145,7 +131,7 @@
 								          <li ng-repeat="gp in askModalObj.init.resultCodeGroups"><a href="" ng-click="askModalObj.changeResultGroups(gp)">{{ gp.name }}</a></li>
 								        </ul>
 									</div>	
-									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.resultCodes" required>
+									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.resultCodes">
 										<option value="">--เลือก Result Code--</option>
 							  		</select>
 						  		</div>
