--- a/backend/src/main/webapp/app/views/dym_list/list_det.html
+++ b/backend/src/main/webapp/app/views/dym_list/list_det.html
@@ -9,27 +9,39 @@
 		<thead>
 			<tr style="color: #337AB7;">
 				<th style="width: 10%;">ตัวย่อ</th>
-				<th style="width: 40%;">ประโยคเต็ม</th>
+				<th style="width: 20%;">ประโยคเต็ม</th>
 				<th style="width: 30%;">ความหมาย</th>
+				<th style="width: 10%;">Notice</th>
+				<th style="width: 10%;">กรุ๊ป</th>
 				<th style="width: 10%;">สถานะ</th>
 				<th style="width: 10%;"></th>
 			</tr>
 		<thead>
 		<tbody>
-			<tr ng-repeat="item in itemDets" style="color: #337AB7;">
-				<td style="vertical-align: middle;"><span editable-text="item.actCode" e-name="code" e-form="rowform">{{ item.actCode }}</span></td>
-				<td style="vertical-align: middle;"><span editable-text="item.actDesc" e-name="desc" e-form="rowform">{{ item.actDesc }}</span></td>
-				<td style="vertical-align: middle;"><span editable-text="item.actMeaning" e-name="meaning" e-form="rowform">{{ item.actMeaning }}</span></td>
-				<td style="vertical-align: middle;">
-					<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
-						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
-						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
-					</span>
-				</td>
-				<td style="vertical-align: middle;">
-					<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
-						<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
-						<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
+		<tr ng-repeat="item in itemDets" style="color: #337AB7;">
+			<td style="vertical-align: middle;"><span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span></td>
+			<td style="vertical-align: middle;"><span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span></td>
+			<td style="vertical-align: middle;"><span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span></td>
+			<td style="vertical-align: middle;">
+				<span e-form="rowform" e-name="isPrintNotice" editable-checkbox="item.isPrintNotice" e-title="ปริ้น Notice">
+				    <i class="fa fa-print fa-lg user-status-enabled-icon" ng-show="item.isPrintNotice"></i> 
+				</span>
+			</td>
+			<td>
+	      		<span editable-select="item.groupId" e-name="groupId" e-form="rowform" e-ng-options="g.id as g.name for g in dymListDetGroup">
+		          {{ item.groupId ? (dymListDetGroup | filter:{id:item.groupId})[0].name : ''}}
+		        </span>
+	      	</td>
+			<td style="vertical-align: middle;">
+				<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
+					<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
+					<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
+				</span>
+			</td>
+			<td style="vertical-align: middle;">
+				<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
+					<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
+					<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
 					</form>
 					<div class="buttons" ng-show="!rowform.$visible">
 						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index, item.id)" title="ลบ"></i>&nbsp; 
@@ -42,7 +54,54 @@
 </div>
 
 <div class="pull-right">
+	<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="listDetgroupModal()"><i class="fa fa-cubes"></i></button>
 	<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()">
 		<i class="fa fa-plus-square"></i>
 	</button>
 </div>
+
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Group</h4>
+            </div>
+            <div class="modal-body">            	    	
+				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+				  <div class="panel-body">
+				  
+				  
+				  	<div class="row" ng-repeat="item in dymListDetGroup"> 
+				  		<div class="col-lg-8" style="text-align: center;">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px; cursor: default;"
+						  	        editable-text="item.name" e-style="margin-bottom: 3px; min-width: 300px;" e-name="name" e-form="rowform">{{ item.name }}</button>
+				  		</div>
+				  		<div class="col-lg-4">
+				  			<form editable-form name="rowform" onbeforesave="saveGroup($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="insertedGroup == item">
+					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
+					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewGroup(item)" class="btn btn-default">ยกเลิก</button>
+					        </form>
+					        <div class="buttons" ng-show="!rowform.$visible">
+					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
+					          <button class="btn btn-danger" ng-click="removeGroup($index, item.id)">ลบ</button>
+					        </div>  
+				  		</div>
+				  	</div>
+				  	
+				  	<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addGroup()"><i class="fa fa-plus-square"></i></button>
+				  	
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
