--- a/backend/src/main/webapp/app/views/dym_list/list.html
+++ b/backend/src/main/webapp/app/views/dym_list/list.html
@@ -9,14 +9,24 @@
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr style="color: #337AB7;">
-					<th style="width: 65%;">ชื่อ</th>
-					<th style="width: 20%;">สถานะ</th>
+					<th style="width: 60%;">ชื่อ</th>
+					<th style="width: 10%;">Field Name</th>
+					<th style="width: 5%;">Group</th>
+					<th style="width: 15%;">สถานะ</th>
 					<th style="width: 15%;"></th>
 				</tr>
 			<thead>
 			<tbody>
 				<tr ng-repeat="item in items" style="color: #337AB7;">
 					<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
+					<td style="vertical-align: middle;"><span editable-text="item.fieldName" e-name="fieldName" e-form="rowform">{{ item.fieldName }}</span></td>
+						  
+					<td style="vertical-align: middle;">
+						<span editable-checkbox="item.isGroup" e-name="isGroup" e-title="In group?" e-form="rowform">
+						    <i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.isGroup"></i>
+						</span>
+					</td>
+					
 					<td style="vertical-align: middle;">
 						<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses"> 
 							<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i> 
