--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -75,8 +75,9 @@
 
 <div class="panel panel-info" style="margin-top: 3px; margin-bottom: 0;">
 	<div class="panel-heading">
-		<a href="#" e-class="form-control" style="color: black;" e-style="width: 100%;" buttons="no" onaftersave="askModalObj.updateComment(askModalObj.comment)" editable-text="askModalObj.comment"> 
+		<a ng-hide="isHideComment" href="#" e-class="form-control" style="color: black;" e-style="width: 100%;" buttons="no" onaftersave="askModalObj.updateComment(askModalObj.comment)" editable-text="askModalObj.comment"> 
 			{{ askModalObj.comment || 'บันทึกเพิ่มเติม'}} 
 		</a>
+		<span ng-show="isHideComment">&nbsp;</span>
 	</div>
 </div>
