--- a/backend/src/main/webapp/app/views/payment_to_us/main.html
+++ b/backend/src/main/webapp/app/views/payment_to_us/main.html
@@ -1,31 +1,39 @@
+<style>
+.addr_cus .editable-wrap {
+    width: 100%;
+}
+.addr_cus .editable-controls {
+	width: 100%;
+}
+</style>
 
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-xs-12">
 		<h1 class="page-header">ข้อมูลการชำระเงิน</h1>
 	</div>
 </div>
 
    <div class="row">
-       <div class="col-lg-12">
+       <div class="col-xs-12">
            <div class="row">
-			<div class="col-lg-5">
+			<div class="col-xs-5">
 				<div class="panel panel-primary">
 				
 					<div class="panel-heading">
-                    	<label>เลขที่บัญชีของผู้ชำระ</label>
+                    	<label>ข้อมูลของบริษัทลูกค้า</label>
                     </div>
 					<div class="panel-body">
 	                    <div class="well well-sm" style="margin-bottom: 0;">
-	                    
+	                    	<label><u>เลขที่บัญชีของลูกค้า</u></label>
 	                        <div class="form-horizontal" style="padding-top: 15px;">
 		                        <div class="form-group" ng-repeat="item in items">
 		                        	<div class="row">
-			                        	<div class="col-lg-9">
-											<label class="col-lg-4 control-label">เลขที่บัญชี</label>
+			                        	<div class="col-xs-9">
+											<label class="col-xs-4 control-label">เลขที่บัญชี</label>
 											<span class="form-control" e-class="form-control" style="color: #337AB7;" e-style="margin-left: 3px;" editable-text="item.accNo" e-name="accNo" e-form="rowform">{{ item.accNo }}</span>
 			                        	</div>
 			                        	
-										<div class="col-lg-3">
+										<div class="col-xs-3">
 											<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
 												<div class="buttons control-label" style="text-align: left;">
 													<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
@@ -47,43 +55,85 @@
 								</button>
 							</div>
 	                    </div>
+	                    <div class="row"></div>
+	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
+	                    	<label style="margin-top: 3px;"><u>Email</u></label>
+		                    <div class="row">
+			                    <div class="col-xs-6">
+			                    	<div style="color: #337AB7;" class="addr_cus">
+				                    	<a href="#" e-class="form-control input-sm" e-style="width: 100%;" buttons="no" onaftersave="updateCusCompanyEmail()"
+			                       		   editable-text="customerEmail">{{ customerEmail || 'เพิ่ม Email บริษัท' }}</a>
+			                    	</div>
+			                    </div>
+		                    </div>
+	                    </div>
+	                    <div class="row">&nbsp;</div>
+                    	<div class="col-xs-12">
+	                    	<div class="col-xs-6">
+		                    	<label style="margin-top: 3px;"><u>การออกใบกำกับภาษี</u></label>
+		                    </div>
+		                    <div class="col-xs-6">
+		                    	<label style="margin-top: 3px;"><u>ที่อยู่ส่งเอกสาร</u></label>
+		                    </div>
+                    	</div>
+	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
+		                    <div class="row">
+			                    <div class="col-xs-6">
+			                    	<div style="color: #337AB7;" class="addr_cus">
+				                    	<a href="#" e-class="form-control input-sm" e-style="width: 100%;" e-rows="5" buttons="no" onaftersave="updateCusCompany()"
+			                       		   editable-textarea="customerComInfo">{{ customerComInfo || 'เพิ่มข้อมูลบริษัท' }}</a>
+			                    	</div>
+			                    </div>
+			                    <div class="col-xs-6">
+			                    	<div style="color: #337AB7;" class="addr_cus">
+				                    	<a href="#" e-class="form-control input-sm" e-style="width: 100%;" e-rows="5" buttons="no" onaftersave="updateCusCompany()"
+			                       		   editable-textarea="customerAddress">{{ customerAddress || 'เพิ่มที่อยู่ส่งเอกสาร' }}</a>
+			                    	</div>
+			                    </div>
+		                    </div>
+	                    </div>
+	                    <div class="row">
+	                    	<div class="col-xs-6 col-xs-offset-3">
+		                    	<code>วิธีบันทึก (Ctrl + Enter)</code>
+	                    	</div>
+	                    </div>
                    </div>
                    <div class="panel-footer">
                    	<small>
-                   		<i>**เลขที่บัญชีของผู้ชำระ ทางบริษัทจะใช้ในการระบุตัวตนของลูกค้า*</i>
+                   		<i>**เลขที่บัญชีของลูกค้า ทางบริษัทจะใช้ในการระบุตัวตนของลูกค้า*</i>
                    	</small>
                    </div>
                 </div>
 			</div>
 			
-			<div class="col-lg-7">
+			<div class="col-xs-7">
 				<div class="panel panel-primary">
 				
 					<div class="panel-heading">
-                    	<label>ข้อมูลทางบัญชีของบริษัท METACOM Co.,Ltd.</label>
+                    	<label>ข้อมูลของบริษัท METACOM Co.,Ltd.</label>
                     </div>
 					<div class="panel-body">
 	                    <div class="well well-sm" style="margin-bottom: 0;">
 	                        <div class="form-horizontal">
 	                        	<div class="row">
-			                        <div class="col-lg-4">
+			                        <div class="col-xs-4">
 										<img id="photo" class="img-thumbnail" ng-src="{{ bankIcon }}">
 									</div>
-									<div class="col-lg-8">		
+									<div class="col-xs-8">		
 										<div class="form-group" >
-											<label class="col-lg-4 control-label">ชื่อบัญชี</label>
+											<label class="col-xs-4 control-label">ชื่อบัญชี</label>
 											<span class="form-control" style="color: #337AB7;">บริษัท เมตาคอม จำกัด</span>
 										</div>						
 										<div class="form-group" >
-											<label class="col-lg-4 control-label">สาขา</label>
+											<label class="col-xs-4 control-label">สาขา</label>
 											<span class="form-control" style="color: #337AB7;">สยามพารากอน</span>
 										</div>						
 										<div class="form-group" >
-											<label class="col-lg-4 control-label">ประเภทบัญชี</label>
+											<label class="col-xs-4 control-label">ประเภทบัญชี</label>
 											<span class="form-control" style="color: #337AB7;">ออมทรัพย์</span>
 										</div>						
 										<div class="form-group" >
-											<label class="col-lg-4 control-label">เลขที่บัญชี</label>
+											<label class="col-xs-4 control-label">เลขที่บัญชี</label>
 											<span class="form-control" style="color: #337AB7;">218-243631-5</span>
 										</div>						
 									</div>
@@ -91,16 +141,16 @@
 	                        </div>
 	                    </div>
 	                    <div class="row">
-		                    <div class="col-lg-6">
+		                    <div class="col-xs-6">
 		                    	<label style="margin-top: 3px;">การหัก ณ ที่จ่าย</label>
 		                    </div>
-		                    <div class="col-lg-6">
-		                    	<label style="margin-top: 3px;">การจัดส่งเอกสาร</label>
+		                    <div class="col-xs-6">
+		                    	<label style="margin-top: 3px;">ที่อยู่ส่งเอกสาร</label>
 		                    </div>
 	                    </div>
 	                    <div class="well well-sm" style="margin-bottom: 0; margin-top: 0;">
 		                    <div class="row">
-			                    <div class="col-lg-6">
+			                    <div class="col-xs-6">
 			                    	<div style="color: #337AB7;">
 				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด</span><br />
 				                    	<span>เลขประจำตัวผู้เสียภาษี: 0105551028207</span><br />
@@ -108,7 +158,7 @@
 				                    	<span>ทุ่งครุ เขตทุ่งครุ กรุงเทพมหานคร 10140</span>
 			                    	</div>
 			                    </div>
-			                    <div class="col-lg-6">
+			                    <div class="col-xs-6">
 			                    	<div style="color: #337AB7;">
 				                    	<span>บริษัท เทคโนโลยีแลนด์ จำกัด (Support Center)</span><br />
 				                    	<span>ชั้น 29, อาคาร The Offices at Central World</span><br />
