--- a/backend/src/main/webapp/app/views/login.html
+++ b/backend/src/main/webapp/app/views/login.html
@@ -7,7 +7,8 @@
 	    <div style="text-align: center;">
 		    <p ng-show="isLicenseNotValid" style="color: white;">License is invalid<br />
 		    	<!-- <button><small>Update License</small></button> -->
-		    	<button type="button" class="btn btn-warning btn-xs" ng-click="enterLicense()"><small>Enter new license</small></button>
+		    	<button type="button" class="btn btn-warning btn-xs" ng-click="enterLicense()"><small>Enter new license</small></button><br />
+	    		<button type="button" class="btn btn-warning btn-xs" ng-click="contactUs()" style="margin-top: 3px;"><small>Contact Us</small></button>
 		    </p>
 	    </div>
 	</form>
