--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -53,8 +53,11 @@
 				<div class="col-xs-5" style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
+				<!-- <div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C;"
+					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''"> -->
 				<div class="col-xs-7" style="padding: 1px 0 0 0; border-top: 1px solid #234E7C;"
-					 ng-style="(f.isNotice && !isDisableNoticePrintBtn) ? {'cursor': 'pointer'} : {}" ng-click="(f.isNotice && !isDisableNoticePrintBtn && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''">
+					 ng-style="(f.isNotice && isDisableNoticePrintBtn) ? {'cursor': 'pointer', color: '#FCE505'} : f.isNotice ? {'cursor': 'pointer'} : {}" 
+					 ng-click="(f.isNotice && !isEditMode) ? noticeMenu(detail[f.columnName+'_hide'] || detail[f.columnName], f.noticeForms, detail[f.noticeCusColName]) : ''">	 
 					 
 					 <span ng-show="isEditMode">
 					 	<span ng-show="f.dataType != 'sys_owner'">
