--- a/backend/src/main/webapp/app/views/manage_notice/main.html
+++ b/backend/src/main/webapp/app/views/manage_notice/main.html
@@ -48,6 +48,7 @@
 									  &nbsp;&nbsp;
 									  <button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
 									  <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+									  <button type="button" class="btn btn-outline btn-primary" ng-click="printBatchNotice()">พิมพ์</button>
 									  
 									</div>
 								</div>
