--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -66,6 +66,7 @@
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;"></th>
+								<th style="white-space: nowrap; text-align: center; color: #337AB7;">เวลาเช็ค</th>
 								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
@@ -76,6 +77,9 @@
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td style="vertical-align: middle; text-align: center;">
 									<i class="fa fa-times user-action-icon-danger" ng-click="deleteChkLstItem(data['_id'])" title="ลบ"></i>			
+								</td>
+								<td style="vertical-align: middle; text-align: center;">
+									{{ data.sys_updatedDateTime | date:gb_timeFormat }}
 								</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
