--- a/backend/src/main/webapp/app/views/plugin/main.html
+++ b/backend/src/main/webapp/app/views/plugin/main.html
@@ -56,8 +56,8 @@
 											ng-show="item.isError"><i
 												class="glyphicon glyphicon-remove"></i></span></td>
 										<td nowrap>
-											<button type="button" class="btn btn-success btn-xs"
-												ng-click="item.upload()"
+											<button ng-disabled="!module" type="button" class="btn btn-success btn-xs"
+												ng-click="upload(item)"
 												ng-disabled="item.isReady || item.isUploading || item.isSuccess">
 												<span class="glyphicon glyphicon-upload"></span> Upload
 											</button> <!-- <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()" ng-disabled="!item.isUploading">
@@ -80,11 +80,24 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-lg-6"></div>
+									<!-- <div class="col-lg-6"></div>
 									<div class="col-lg-6">
 										<input type="file" class="form-control pull-left"
 											style="width: 300px;" nv-file-select="" uploader="uploader" />
-									</div>
+									</div> -->
+									
+									<div class="col-lg-12">
+						            	<div class="form-inline pull-right">
+							            	<div class="form-group input-group">
+											  	<span class="input-group-addon">Module</span>
+											  	<select name="splitter" class="form-control" ng-model="module" ng-options="option.code as option.name for option in modules">
+											  		<option value="">--Please Select--</option>
+											  	</select>
+									  		</div>
+						            		<input type="file" class="form-control" nv-file-select="" uploader="uploader" />	  
+									  	</div>
+						            </div>
+						            
 								</div>
 							</div>
 						
@@ -114,12 +127,13 @@
 						<table class="table table-striped table-hover" style="margin: 0;">
 							<thead>
 								<tr style="color: #337AB7;">
-									<th width="5%">#</th>
-									<th width="20%">File Name</th>
+									<th width="3%">#</th>
+									<th width="15%">File Name</th>
+									<th width="10%">Module</th>
 									<th>Command</th>
 									<th width="10%">File Size(MB)</th>
 									<th width="10%">Upload Date</th>
-									<th width="10%"></th>
+									<th width="15%"></th>
 								</tr>
 							<thead>
 							<tbody>
@@ -128,7 +142,7 @@
 									<td style="white-space: nowrap" title="{{ data.fileName }}">
 										{{ data.fileName | limitTo: 20 }} {{data.fileName < 20 ? '' : '...'}}
 									</td>
-									
+									<td>{{ data.module }}</td>
 									<td style="white-space: nowrap">
 										<a href="#" e-class="form-control" buttons="no" onaftersave="updateCommand(data)" editable-text="data.command" e-style="width: 100%;"> 
 											{{ data.command || 'empty'}} 
@@ -137,10 +151,12 @@
 									
 									<td style="white-space: nowrap">{{ data.fileSize }}</td>
 									<td style="white-space: nowrap">{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
-									<td style="white-space: nowrap">
-										<i title="Delete" class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
-										<i title="Download" class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>&emsp;
-										<i title="Deploy" class="fa fa-plane fa-lg user-action-icon-primary" ng-click="deploy(data.id)"></i>
+									<td style="white-space: nowrap; text-align: right;">
+										<i title="Delete" class="fa fa-times user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
+										<i title="Download" class="fa fa-download user-action-icon-primary" ng-click="download(data.id)"></i>&emsp;
+										<i title="Deploy" class="fa fa-plane user-action-icon-primary" ng-click="deploy(data.id)"></i>&emsp;
+										<i title="Stop" class="fa fa-stop user-action-icon-primary" ng-click="stop(data.id)"></i>&emsp;
+										<i title="Start/Restart" class="fa fa-play-circle-o user-action-icon-primary" ng-click="start(data.id)"></i>
 									</td>
 								</tr>
 							</tbody>
